--- a/public/views/vote.html
+++ b/public/views/vote.html
@@ -1,14 +1,58 @@
-<div class="vertical_center">
-    <div class="container text-center">
-        <div>
-            <img src="images/logo.png" style="width: 60px;" alt="logo">
+<div ng-controller="Ctrl">
+    <div class="navbar">
+        <div class="navbar_elements">
+            <a href="/"><img src="images/logo.png" alt="logo" class="logo"></a>
         </div>
 
-        <div>
-            <h1>Voting portal</h1>
+        <div class="navbar_elements" style="margin-left: auto; margin-right: 1vw;" profile-arrow-nav>
+            <img id="profileIcon" src="../images/profile.svg" alt="profile" class="navbar_profile_img" ng-hide="voteVariablesObj.showNavDropdown" ng-click="navbarDropdownOpen()">
+            <span id="navbarCrossIcon" class="navbar_cross" ng-show="voteVariablesObj.showNavDropdown" ng-click="navbarDropdownHide()">&times;</span>
         </div>
-
     </div>
+    <div class="navbar_dropdown" ng-show="voteVariablesObj.showNavDropdown">
+        <ul style="list-style: none; margin: 0px; padding: 0px; text-align: right;">
+            <li class="navbar_dropdown_links" id="navLink_0">
+                Contact Us
+            </li>
+
+        </ul>
+    </div>
+
+    <div class="centerDiv">
+        <br>
+        <br>
+        <br>
+        <table class="table table-striped table-bordered" style="max-width: 950px;">
+            <thead>
+            <tr>
+                <th style="text-align: center">Voter ID</th>
+                <th style="text-align: center">Cast</th>
+            </tr>
+            </thead>
+
+            <tbody ng-repeat="candi in ballot track by $index">
+            <tr>
+                <td align="center" style="font-size: 18px;">{{candi.voterId}}</td>
+                <td align="center" style="font-size: 18px;">{{candi.cast}}</td>
+            </tr>
+
+            </tbody>
+        </table>
+    </div>
+
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
