--- a/public/views/vote.html
+++ b/public/views/vote.html
@@ -3,7 +3,10 @@
         <div class="navbar_elements">
             <a href="/"><img src="images/logo.png" alt="logo" class="logo"></a>
         </div>
+        <div class="navbar_elements" style="padding-left: 10px;">
+            <span class="Constituency"><b>Bangalore South</b></span>
 
+        </div>
         <div class="navbar_elements" style="margin-left: auto; margin-right: 1vw;" profile-arrow-nav>
             <img id="profileIcon" src="../images/profile.svg" alt="profile" class="navbar_profile_img" ng-hide="voteVariablesObj.showNavDropdown" ng-click="navbarDropdownOpen()">
             <span id="navbarCrossIcon" class="navbar_cross" ng-show="voteVariablesObj.showNavDropdown" ng-click="navbarDropdownHide()">&times;</span>
@@ -38,6 +41,12 @@
 
             </tbody>
         </table>
+        <br>
+        <br>
+        <img src="../images/winner.png" style="width: 140px; position:relative; top:0; left:0;right:0;bottom:0; margin:auto;" alt="Winner">
+        <br>
+        <br>
+        <h2 style="margin:auto;">Winner: <b><u>R. Gundu Rao</u></b></h2>
     </div>
 
 </div>
